src/Pages/Poll/Poll.css
.draggableList
{
  min-height: 50px;
}

.listContainer
{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  height: auto;
}

.pollButtonContainer
{
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;
}

.pollPageContainer
{
  display: flex;
  flex-direction: column;
}

.pollTitle
{
  text-align: center;
  margin-bottom: 20px;
}


@media only screen and (max-width: 768px)
{
  .pollButtonContainer
  {
    flex-direction: column;
    align-items: center;
  }

  .pollTitle
  {
    text-align: center;
    font-size: 24px;
  }

}

